--- a/les 01/oefening-01.html
+++ b/les 01/oefening-01.html
@@ -14,6 +14,8 @@
             Berlaar
             <br>
             02/12/2002
+            <br>
+            Vloams
         </p>
     </body>
 </html>
