--- a/les 01/oefening-01.html
+++ b/les 01/oefening-01.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
     <head>
         <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oefening 1 - Kennismaking</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Ilya Peeters">
+        <!--De datum van wanneer dit bestand is aangemaakt is 15/02/2022-->
+        <title>Oefening 1 - Kennismaking</title>
     </head>
 
     <body>
@@ -15,7 +17,15 @@
             <br>
             02/12/2002
             <br>
-            Vloams
+            <a href="https://thomasmore.be" target="_blank">Bezoek Thomas More!</a>
+            <br>
+            <a href="mailto:r0834385@student.thomasmore.be">Stuur een mail.</a>
+            <br>
+            ~~~~~~~~~~~~~~~~~~~~~~~~
+            <br>
+            <a href="contact.html">Contact pagina</a>
+            //
+            <a href="informatie.html" target="_blank">Informatie pagina</a>
         </p>
     </body>
 </html>
