--- a/les 02/les02-oef02.html
+++ b/les 02/les02-oef02.html
@@ -12,17 +12,12 @@
     <hr>
     <h1>Deze baasjes lijken op hun hond</h1>
     <hr>
-    <a href="eigenaar1.html"><img src="img/klein/1.jpg" alt="Foto 1" /></a>
-    <br>
-    <a href="eigenaar2.html"><img src="img/klein/2.jpg" alt="Foto 2" /></a>
-    <br>
-    <a href="eigenaar3.html"><img src="img/klein/3.jpg" alt="Foto 3" /></a>
-    <br>
-    <a href="eigenaar4.html"><img src="img/klein/4.jpg" alt="Foto 4" /></a>
-    <br>
-    <a href="eigenaar5.html"><img src="img/klein/5.jpg" alt="Foto 5" /></a>
-    <br>
-    <a href="eigenaar6.html"><img src="img/klein/6.jpg" alt="Foto 6" /></a>
+    <div><a href="eigenaar1.html"><img src="img/klein/1.jpg" alt="Foto 1" /></a></div>
+    <div><a href="eigenaar2.html"><img src="img/klein/2.jpg" alt="Foto 2" /></a></div>
+    <div><a href="eigenaar3.html"><img src="img/klein/3.jpg" alt="Foto 3" /></a></div>
+    <div><a href="eigenaar4.html"><img src="img/klein/4.jpg" alt="Foto 4" /></a></div>
+    <div><a href="eigenaar5.html"><img src="img/klein/5.jpg" alt="Foto 5" /></a></div>
+    <div><a href="eigenaar6.html"><img src="img/klein/6.jpg" alt="Foto 6" /></a></div>
 
 </body>
 
