--- a/les 02/les02-oef03.html
+++ b/les 02/les02-oef03.html
@@ -23,8 +23,9 @@
     Word jij de gemotiveerde informaticus waarop het werkveld zit te wachten? </p>
     
     <h2>Meer informatie nodig?</h2>
-    Bezoek de website <a href="https://www.thomasmore.be">www.thomasmore.be</a> of <a href="mailto:info@thomasmore.be">mail</a> ons!
-    
+    <p>Bezoek de website <a href="https://www.thomasmore.be" target="_blank">www.thomasmore.be</a> of <a href="mailto:info@thomasmore.be">mail</a> ons!</p>
+    <p>&copy; TM - 2022</p>
+    <a href="#top">Naar boven</a>
 </body>
 
 </html>
