--- a/les 02/les02-oef03.html
+++ b/les 02/les02-oef03.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="img/tm_standaard.png" height="150" alt="standaard TM logo" />
+    <img src="img/tm_standaard.png" height="150" alt="logo TM" />
     <h1>Toegepaste Informatica</h1>
     <p>Elke organisatie rekent op IT, je kan overal terechtkomen. Als informaticus ben je de schakel tussen mensen met digitale vragen en machines met digitale oplossingen. Uniek aan onze opleiding is dat we jou met beiden leren omgaan,
     met machines én met mensen.</p>
