--- a/les 02/les02-oef06.html
+++ b/les 02/les02-oef06.html
@@ -25,11 +25,12 @@
         <li>Dinsdag</li>
         <li>Woensdag
             <ol>
-                <li>Engels</li>
+                <li>Engels
                 <ul>
                     <li>Woordenboek!</li>
                     <li>Cursus afhalen</li>
                 </ul>
+                </li>
                 <li>C#</li>
                 <li>Statische websites</li>
             </ol>    
