project contact pagina

--- a/Project/index.html
+++ b/Project/index.html
@@ -7,6 +7,21 @@
     <title>Home</title>
 </head>
 <body>
-    Welkom op de pagina van Ilya Peeters
+    <h1>Welkom op de portfolio van Ilya Peeters</h1>
+    <hr>
+    <div><img src="../Project/img/IMG_20210909_162202.jpg" width="200" alt="Foto_ilya" ></div>
+    <div>Hallo ik ben ilya en welkom op mijn portfolio.</div>
+    <div>Op mijn portfolio gaat u verschillende pagina's vinden maar hier over later meer.</div>
+    <div>Hieronder vindt u 4 verschillende knoppen terug. Een knop voor: curricilum vitea, ervaring, hobby's / interesses en een contactpagina.</div>    
+    <table border="1" cellspacing="1" cellpadding="3">
+        <tr>
+            <td>Curricilum vitea</td>
+            <td>Ervaring</td>
+        </tr>
+        <tr>
+            <td>Hobby's en interesses</td>
+            <td><a href="contact.html">Contact</a></td>
+        </tr>
+    </table>
 </body>
 </html>
