project afgewerkte contactpagina

--- a/Project/contact.html
+++ b/Project/contact.html
@@ -33,7 +33,7 @@
     <h4>U kan mij verder bereiken via:</h4>
     <div>Telefoon: bel naar 0487135427 of druk hier<a href="tel:0487135427"><img src="../Project/img/telefoon_logo.jpg" alt="telefoon_logo" width="20"></a></div>
     <div>Mail: stuur een mail naar ilya.peeters@gmail.com of druk hier<a href="mailto:ilya.peeters@gmail.com"><img src="../Project/img/mail_logo.jpg" alt="mail_logo" width="25"></a></div>
-    <div>LinkedIn: druk hier om naar mijn linkedIn te gaan <a href="https://linkedin.com"><img src="../Project/img/Linkedin-logo-transparent-PNG.png" alt="linkedin_logo" width="25"></a</div>
+    <div>LinkedIn: druk hier om naar mijn linkedIn te gaan <a href="https://linkedin.com" target="_blank"><img src="../Project/img/Linkedin-logo-transparent-PNG.png" alt="linkedin_logo" width="25"></a</div>
     <hr>
     <a href="index.html">Terug naar start</a>
     
