--- a/Project/index.html
+++ b/Project/index.html
@@ -10,9 +10,27 @@
     <h1>Welkom op de portfolio van Ilya Peeters</h1>
     <hr>
     <div><img src="../Project/img/IMG_20210909_162202.jpg" width="200" alt="Foto_ilya" ></div>
-    <div>Hallo ik ben ilya en welkom op mijn portfolio.</div>
+    <div>Hallo ik ben Ilya Peeters en welkom op mijn portfolio.</div>
     <div>Op mijn portfolio gaat u verschillende pagina's vinden maar hier over later meer.</div>
-    <div>Hieronder vindt u 4 verschillende knoppen terug. Een knop voor: curricilum vitea, ervaring, hobby's / interesses en een contactpagina.</div>    
+    <div>Eerst wat over mezelf, ik ben 19 jaar en studeer een graduaat Systeem- en netwerkbeheer te Geel. Ik zit momenteel is mijn eerste jaar van deze graduaat opleiding.</div>
+    <br>
+    <h3>Sterkte punten</h3>
+    <div>Enkele stertke punten dat ik bij mezelf heb gezien zijn:</div>
+    <ul>
+        <li>Teamleider</li>
+        <li>Gemotiveerd</li>
+        <li>Deadline gebonden</li>
+        <li>Positief ingesteld</li>
+    </ul>
+    <h3>Minpunten</h3>
+    <ul>
+        <li>Soms te veel bezig met andere hun werk</li>
+        <li>Weet niet altijd wat te doen</li>
+        <li></li>
+    </ul>
+    <div></div>
+    <div>Hieronder vindt u 4 verschillende knoppen terug. Deze knoppen kunt u gebruiken om naar de verschillende webpagina's gaan.</div>
+    <br>  
     <table border="1" cellspacing="1" cellpadding="3">
         <tr>
             <td>Curricilum vitea</td>
