--- a/Project/index.html
+++ b/Project/index.html
@@ -23,21 +23,22 @@
         <li>Positief ingesteld</li>
     </ul>
     <h3>Minpunten</h3>
+    <div>Hier enkele minpunten over mezelf:</div>
     <ul>
         <li>Soms te veel bezig met andere hun werk</li>
         <li>Weet niet altijd wat te doen</li>
-        <li></li>
+        <li>Kan snel afgeleid raken</li>
     </ul>
     <div></div>
     <div>Hieronder vindt u 4 verschillende knoppen terug. Deze knoppen kunt u gebruiken om naar de verschillende webpagina's gaan.</div>
     <br>  
     <table border="1" cellspacing="1" cellpadding="3">
         <tr>
-            <td>Curricilum vitea</td>
-            <td>Ervaring</td>
+            <td><a href="cv.html">Curricilum vitea</a></td>
+            <td><a href="ervaring.html">Ervaring</a></td>
         </tr>
         <tr>
-            <td>Hobby's en interesses</td>
+            <td><a href="hobby's/interesses.html">Hobby's en interesses</a></td>
             <td><a href="contact.html">Contact</a></td>
         </tr>
     </table>
