project afgewerkte startpagina

--- a/Project/index.html
+++ b/Project/index.html
@@ -38,7 +38,7 @@
             <td><a href="ervaring.html">Ervaring</a></td>
         </tr>
         <tr>
-            <td><a href="hobby's/interesses.html">Hobby's en interesses</a></td>
+            <td><a href="hobby's-interesses.html">Hobby's en interesses</a></td>
             <td><a href="contact.html">Contact</a></td>
         </tr>
     </table>
