project afgewerkte ervaring pagina

--- a/Project/cv.html
+++ b/Project/cv.html
@@ -9,6 +9,44 @@
 <body>
     <h1>Curriculum vitea</h1>
     <hr>
+    <div>Op deze pagina gaat u mijn curricilum vitea vinden.</div>
+    <h2>Opleidingen</h2>
+    <table border="2" cellpading="4" cellspacing="4">
+        <tr>
+            <td><strong>Opleiding</strong></td>
+            <td><strong>School</strong></td>
+            <td><strong>Locatie</strong></td>
+            <td><strong>Periode</strong></td>
+        </tr>
+        <tr>
+            <td>Systeem- en netwerkbeheer</td>
+            <td>Thomas more</td>
+            <td>Geel</td>
+            <td>Sept. 2021 - Heden</td>
+        </tr>
+        <tr>
+            <td>Energietechnologie</td>
+            <td>Thomas more</td>
+            <td>Geel</td>
+            <td>Sept. 2020 - Aug. 2021</td>
+        </tr>
+        <tr>
+            <td>Electro mechanica</td>
+            <td>Githo</td>
+            <td>Nijlen</td>
+            <td>Jan. 2018 - Juni 2020</td>
+        </tr>
+        <tr>
+            <td>Industriële wetenschappen</td>
+            <td>Githo</td>
+            <td>Nijlen</td>
+            <td>Sep. 2014 - Dec. 2017</td>
+        </tr>
+    </table>
+    <h2>Vaardigheden</h2>
+    <table border="2">
+
+    </table>
     <hr>
     <a href="index.html">Terug naar start</a>
 </body>
