project afgewerkte cv pagina

--- a/Project/cv.html
+++ b/Project/cv.html
@@ -11,7 +11,7 @@
     <hr>
     <div>Op deze pagina gaat u mijn curricilum vitea vinden.</div>
     <h2>Opleidingen</h2>
-    <table border="2" cellpading="4" cellspacing="4">
+    <table border="2" cellpadDing="2" cellspacing="4">
         <tr>
             <td><strong>Opleiding</strong></td>
             <td><strong>School</strong></td>
@@ -44,8 +44,47 @@
         </tr>
     </table>
     <h2>Vaardigheden</h2>
-    <table border="2">
-
+    <table border="2" cellpadding="2" cellspacing="4">
+        <tr>
+            <td><strong>Vaardigheid</strong></td>
+            <td><strong>Level (1-5)</strong></td>
+        </tr>
+        <tr>
+            <td>Windows</td>
+            <td>4</td>
+        </tr>
+        <tr>
+            <td>Linux</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>Microsoft SQL Server</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>HTML</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>Python</td>
+            <td>4</td>
+        </tr>
+        <tr>
+            <td>Powershell</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>Solidworks</td>
+            <td>4</td>
+        </tr>
+        <tr>
+            <td>SEE Electrical</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>TIA Portal</td>
+            <td>4</td>
+        </tr>
     </table>
     <hr>
     <a href="index.html">Terug naar start</a>
