--- a/Project/index.html
+++ b/Project/index.html
@@ -6,12 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
     <title>Home</title>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+        <a href="#" class="navbar-brand">Mijn portfolio</a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav">
+                <a href="index.html" class="nav-item nav-link active">Startpagina</a>
+                <a href="cv.html" class="nav-item nav-link">Curricilum vitea</a>
+                <a href="ervaring.html" class="nav-item nav-link">Ervaring</a>
+                <a href="hobby's-interesses.html" class="nav-item nav-link">Hobby's & interesses</a>
+                <a href="contact.html" class="nav-item nav-link">Contact</a>
+            </div>
+        </div>
+    </div>
+  </nav>
     <h1>Welkom op de portfolio van Ilya Peeters</h1>
     <hr>
-    <div><img src="../Project/img/IMG_20210909_162202.jpg" width="200" alt="Foto_ilya" ></div>
+    <div><img src="../Project/img/IMG_20210909_162202.jpg" width="200" alt="Foto_ilya" style="float: right; right: 50%;" ></div>
     <div>Hallo ik ben Ilya Peeters en welkom op mijn portfolio.</div>
     <div>Op mijn portfolio gaat u verschillende pagina's vinden maar hier over later meer.</div>
     <div>Eerst wat over mezelf, ik ben 19 jaar en studeer een graduaat Systeem- en netwerkbeheer te Geel. Ik zit momenteel is mijn eerste jaar van deze graduaat opleiding.</div>
@@ -31,19 +49,13 @@
         <li>Weet niet altijd wat te doen</li>
         <li>Kan snel afgeleid raken</li>
     </ul>
-    <div></div>
-    <div>Hieronder vindt u 4 verschillende knoppen terug. Deze knoppen kunt u gebruiken om naar de verschillende webpagina's gaan.</div>
-    <br>  
-    <table border="1" cellspacing="4" cellpadding="2">
-        <tr>
-            <td><a href="cv.html">Curricilum vitea</a></td>
-            <td><a href="ervaring.html">Ervaring</a></td>
-        </tr>
-        <tr>
-            <td><a href="hobby's-interesses.html">Hobby's en interesses</a></td>
-            <td><a href="contact.html">Contact</a></td>
-        </tr>
-    </table>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
+<style>
+  body{
+    background-color: gainsboro;
+  }
+  
+</style>
 </html>
+
