--- a/Project/index.html
+++ b/Project/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
     <title>Home</title>
 </head>
 <body>
@@ -29,33 +29,45 @@
   </nav>
     <h1>Welkom op de portfolio van Ilya Peeters</h1>
     <hr>
-    <div><img src="../Project/img/IMG_20210909_162202.jpg" width="200" alt="Foto_ilya" style="float: right; right: 50%;" ></div>
-    <div>Hallo ik ben Ilya Peeters en welkom op mijn portfolio.</div>
-    <div>Op mijn portfolio gaat u verschillende pagina's vinden maar hier over later meer.</div>
-    <div>Eerst wat over mezelf, ik ben 19 jaar en studeer een graduaat Systeem- en netwerkbeheer te Geel. Ik zit momenteel is mijn eerste jaar van deze graduaat opleiding.</div>
-    <br>
-    <h3>Sterkte punten</h3>
-    <div>Enkele stertke punten dat ik bij mezelf heb gezien zijn:</div>
-    <ul>
-        <li>Teamleider</li>
-        <li>Gemotiveerd</li>
-        <li>Deadline gebonden</li>
-        <li>Positief ingesteld</li>
-    </ul>
-    <h3>Minpunten</h3>
-    <div>Hier enkele minpunten over mezelf:</div>
-    <ul>
-        <li>Soms te veel bezig met andere hun werk</li>
-        <li>Weet niet altijd wat te doen</li>
-        <li>Kan snel afgeleid raken</li>
-    </ul>
+    <div class="content">
+      <div><img class="portret" src="../Project/img/IMG_20210909_162202.jpg" width="200" alt="Foto_ilya" style="float: right; right: 50%;" ></div>
+      <div>Hallo ik ben Ilya Peeters en welkom op mijn portfolio.</div>
+      <div>Op mijn portfolio gaat u verschillende pagina's vinden maar hier over later meer.</div>
+      <div>Eerst wat over mezelf, ik ben 19 jaar en studeer een graduaat Systeem- en netwerkbeheer te Geel. Ik zit momenteel is mijn eerste jaar van deze graduaat opleiding.</div>
+      <br>
+      <h3>Sterkte punten</h3>
+      <div>Enkele stertke punten dat ik bij mezelf heb gezien zijn:</div>
+      <ul>
+          <li>Teamleider</li>
+          <li>Gemotiveerd</li>
+          <li>Deadline gebonden</li>
+          <li>Positief ingesteld</li>
+      </ul>
+      <h3>Minpunten</h3>
+      <div>Hier enkele minpunten over mezelf:</div>
+      <ul>
+          <li>Soms te veel bezig met andere hun werk</li>
+          <li>Weet niet altijd wat te doen</li>
+          <li>Kan snel afgeleid raken</li>
+      </ul>
+    </div>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
+</html>
+
 <style>
   body{
     background-color: gainsboro;
   }
-  
+  .portret{
+    margin: 2rem;
+    width: 20%;
+    border-radius: 1rem;
+  }  
+  h5{
+      margin: 1rem;
+  }
+  .content{
+      margin: 1rem;
+  }
 </style>
-</html>
-
