project 2 hobby's & interesses klaar

--- a/Project/hobby's-interesses.html
+++ b/Project/hobby's-interesses.html
@@ -4,11 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
+    <!-- Bootstrap CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>Hobby's en interesses</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand">Mijn portfolio</a>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav">
+                    <a href="index.html" class="nav-item nav-link">Startpagina</a>
+                    <a href="cv.html" class="nav-item nav-link">Curricilum vitea</a>
+                    <a href="ervaring.html" class="nav-item nav-link">Ervaring</a>
+                    <a href="hobby's-interesses.html" class="nav-item nav-link active">Hobby's & interesses</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                </div>
+            </div>
+        </div>
+      </nav>
     <h1>Hobby's en interesses</h1>
     <hr>
+    <div class="content">
     <p>
         Op deze pagina ga ik wat meer uitleg geven over mijn hobby's en interesses, zoals wanneer ik ben gestart en waarom.
     </p>
@@ -23,6 +44,8 @@
     <h3>Volleybal</h3>
     <p>
         <img src="../Project/img/volleybal.jpg" alt="volleybal" width="25%">
+    </p>
+    <p>
         1 van mijn hobby's is volleybal, dit doe ik sinds 2017. Ik ben gestart door een vriend dat al volleybal speelde.
         Ik had toen een training mee gedaan en vond het helemaal geweldig, ik was meteen verkocht.
         Ik speel in de club VC Berlaar te Berlaar. Dit doe ik al sinds het begin dat ik volleybal speel.
@@ -30,6 +53,8 @@
     <h3>Airsoft</h3>
     <p>
         <img src="../Project/img/airsoft.jpg" alt="airsoft" width="25%">
+    </p>
+    <p>
         Een andere van mijn hobby's is airsoft. Ik heb mijn eerste replica gekocht in December 2020, mijn eerste skirm heb ik gespeeld in mei 2021.
         Hier zit wel wat tijd tussen dit komt omdat destijds skirm's nog niet mochten vanwege het coronavirus.
         Ik ben hier mee begonnen omdat ik veel filmpjes op youtube heb gezien. Na mijn eerste skirm was ik helemaal verkocht.
@@ -49,6 +74,8 @@
     <h3>American football</h3>
     <p>
         <img src="../Project/img/american football.jpg" alt="american football" width="25%">
+    </p>
+    <p>
         De eerste van mijn interesses is american football. Ik vind dit een geweldige sport om naar te kijken.
         Ik ben american football beginnen kijken in het seizoen van 2020-2021, de reden dat ik ben beginnen kijken is door 1 van mijn beste vrienden.
         Ik had eerder al wat highlights gezien van de sport en vond dat al heel cool. Vanaf dat ik de regels begreep was ik helemaal verkocht.
@@ -57,6 +84,8 @@
     <h3>Voetbal</h3>
     <p>
         <img src="../Project/img/voetbal.jpg" alt="voetbal" width="25%">
+    </p>
+    <p>
         Een volgende interesse van mij is voetbal. Ik denk dat dit bij de meeste jongens wel een interesse is.
         Ik vind voetbal tof om zelf te doen maar nog toffer om te supporteren voor mijn favoriete ploeg Chelsea.
         Ik ben begonnen met voetbal op mijn 5 jaar en ben gestopt op mijn 12 omdat ik het niet meer zo tof vond.
@@ -65,6 +94,8 @@
     <h3>Fietsen</h3>
     <p>
         <img src="../Project/img/fiets.jpg" alt="fiets" width="25%">
+    </p>
+    <p>
         Mijn volgende interesse is fietsen. Dit komt omdat mijn vader altijd heeft gefietst en hij heeft mij een keer meegenomen en ik vond dit wel tof om te doen.
         Ik fiets al van een jonge leeftijd maar de eerste keer dat ik op een koersfiets ben gaan zitten was op mijn 15.
         In 2018 heb ik de Mont Ventoux beklommen met niet zoveel training.
@@ -74,12 +105,25 @@
     <h3>Formula 1</h3>
     <p>
         <img src="../Project/img/f1.jpg" alt="f1" width="25%">
+    </p>
+    <p>
         De laatste van mijn interesses is formule 1. Ik ben beginnen kijken in 2019, maar ben pas fan geworden in 2021.
         De reden dat ben beginnen kijken van formule 1 is vanwege mijn broer, hij had dit eens aanstaan en ik dacht er eerst niet veel van.
         Maar vanaf ik een beetje meer opzoekwerk had gedaan over deze sport was het heel boeiend. Het is niet enkel maar rijden met de auto en hopen dat je de snelste bent op de baan.
         Maar er komt ook heel veel strategie bij kijken, en dat is nu juist wat ik er zo boeiend aan vind.
     </p>
-    <hr>
-    <a href="index.html">Terug naar start</a>
+    <script src="js/bootstrap.bundle.min.js"></script>
+</div>
 </body>
 </html>
+<style>
+body{
+    background-color: gainsboro;
+  }
+img{
+    border-radius: 2rem;
+}
+.content{
+    margin: 1rem;
+}
+</style>
