--- a/Project/ervaring.html
+++ b/Project/ervaring.html
@@ -31,16 +31,11 @@
     <hr>
     <div>Op deze pagina gaat u mijn ervaringen vinden.</div>
     <br>
-
-
-
-
       <div class="container" id="timeline">
         <div id="timeline-header">
           <h1>TIJDLIJN</h1>
         </div>
         <div class="col-xs-6" id="start-left">
-
         </div>
         <div class="col-xs-6" id="start-right">
         </div>
@@ -150,7 +145,7 @@
   position: relative;
   text-align: center;
   border-width: 4px;
-  border-color: #fff;
+  border-color: #0d6efd;
   text-align: center;
   padding-top: 40px;
 }
@@ -159,8 +154,8 @@
 #start-left {
   position: relative;
   left: 0;
-  border-top: 2px solid #fff;
-  border-right: 2px solid #fff;
+  border-top: 2px solid #0d6efd;
+  border-right: 2px solid #0d6efd;
   border-radius: 0 60px 0 0;
   height: 80px;
   
@@ -169,8 +164,8 @@
 #start-right {
   position: relative;
   right: 0;
-  border-top: 2px solid #fff;
-  border-left: 2px solid #fff;
+  border-top: 2px solid #0d6efd;
+  border-left: 2px solid #0d6efd;
   border-radius: 60px 0 0 0;
   height: 80px;
   
@@ -179,7 +174,7 @@
 /* Left side */
 
 .time-left {
-  border-right: 2px solid #fff;
+  border-right: 2px solid #0d6efd;
   height: 200px;
   padding: 0 15px 0 0;
   text-align: right;
@@ -198,14 +193,14 @@
   bottom: 0;
   padding: 0;
   margin: 0;
-  border-top: 4px solid #fff;
-  border-color: #fff;
+  border-top: 4px solid #0d6efd;
+  border-color: #0d6efd;
 }
 
 /* Right Side */
 
 .time-right {
-  border-left: 2px solid #fff;
+  border-left: 2px solid #0d6efd;
   height: 200px;
   padding: 0 0 0 15px;
   text-align: left;
@@ -219,8 +214,8 @@
   bottom: 0;
   padding: 0;
   margin: 0;
-  border-top: 4px solid #fff;
-  border-color: #fff;
+  border-top: 4px solid #0d6efd;
+  border-color: #0d6efd;
 }
 
 .time-right .date {
