--- a/Project/ervaring.html
+++ b/Project/ervaring.html
@@ -29,102 +29,66 @@
       </nav>
     <h1>Ervaring</h1>
     <hr>
-    <div>Op deze pagina gaat u mijn ervaringen vinden.</div>
+    <div class="content">Op deze pagina gaat u mijn ervaringen vinden.</div>
     <br>
-      <div class="container" id="timeline">
-        <div id="timeline-header">
-          <h1>TIJDLIJN</h1>
-        </div>
-        <div class="col-xs-6" id="start-left">
-        </div>
-        <div class="col-xs-6" id="start-right">
-        </div>
-        <div class="col-xs-6 time-left">
-          <div class="date">
-            <h1>2016</h1>
+    <div class="container">
+      <div class="row">
+          <div class="col-md-12">
+              <div class="main-timeline">
+                  <div class="timeline">
+                      <a href="" class="timeline-content">
+                          <div class="timeline-icon"></div>
+                          <div class="inner-content">
+                              <h3 class="title">Afwasser</h3>
+                              <p class="description">Ristorante Annaloro, Lier</p>
+                              <p class="description">Jan. 2022 - Heden</p>
+                          </div>
+                      </a>
+                  </div>
+                  <div class="timeline">
+                      <a href="" class="timeline-content">
+                          <div class="timeline-icon"></div>
+                          <div class="inner-content">
+                              <h3 class="title">Monteur</h3>
+                              <p class="description">Atlas Copco, Wilrijk</p>
+                              <p class="description">Jul. 2021</p>
+                          </div>
+                      </a>
+                  </div>
+                  <div class="timeline">
+                    <a href="" class="timeline-content">
+                        <div class="timeline-icon"></div>
+                        <div class="inner-content">
+                            <h3 class="title">Magazijnier</h3>
+                            <p class="description">DM Lights, Heist-op-den-berg</p>
+                            <p class="description">Aug. 2020 - Feb. 2021</p>
+                        </div>
+                    </a>
+                    </div>
+                    <div class="timeline">
+                      <a href="" class="timeline-content">
+                          <div class="timeline-icon"></div>
+                          <div class="inner-content">
+                              <h3 class="title">Opdiener</h3>
+                              <p class="description">Sporthal 't Stapveld, Berlaar</p>
+                              <p class="description">Aug. 2018 - Mrt. 2020</p>
+                          </div>
+                      </a>
+                    </div>
+                    <div class="timeline">
+                      <a href="" class="timeline-content">
+                          <div class="timeline-icon"></div>
+                          <div class="inner-content">
+                              <h3 class="title">Afwasser</h3>
+                              <p class="description">Sporthal 't Stapveld, Berlaar</p>
+                              <p class="description">Aug. 2018 - Mrt. 2020</p>
+                          </div>
+                      </a>
+                  </div>
+              </div>
           </div>
-          <div class="date-details">
-            <h3>Job Title</h3>
-            <p>February 2015 - Present</p>
-          </div>
-          <div class="inner-left">
-          </div>
-        </div>
-
-        <div class="col-xs-6 time-right">
-        </div>
-        <!-- Break -->
-        <div class="col-xs-6 time-left">
-        </div>
-
-        <div class="col-xs-6 time-right">
-          <div class="date">
-            <h2>2014</h2>
-          </div>
-          <div class="date-details">
-            <h3>Job Title</h3>
-            <p>January 2014 - February 2015</p>
-          </div>
-          <div class="inner-right">
-          </div>
-        </div>
-        <!-- Break -->
-        <div class="col-xs-6 time-left">
-          <div class="date">
-            <h2>2013</h2>
-          </div>
-          <div class="date-details">
-            <h3>Job Title</h3>
-            <p>March 2013 - January 2016</p>
-          </div>
-          <div class="inner-left">
-          </div>
-        </div>
-
-        <div class="col-xs-6 time-right">
-        </div>
-    </div>
-
-    <table border="2" cellspacing="4" cellpadding="2">
-        <tr>
-            <td><strong>Functie</strong></td>
-            <td><strong>Naam bedrijf</strong></td>
-            <td><strong>Locatie</strong></td>
-            <td><strong>Periode</strong></td>
-        </tr>
-        <tr>
-            <td>Afwasser</td>
-            <td>Ristorante Annaloro</td>
-            <td>Lier</td>
-            <td>Jan. 2022 - Heden</td>
-        </tr>
-        <tr>
-            <td>Monteur</td>
-            <td>Atlas Copco</td>
-            <td>Wilrijk</td>
-            <td>Jun. 2021</td>
-        </tr>
-        <tr>
-            <td>Magazijnier</td>
-            <td>Dm lights</td>
-            <td>Hijst-op-den-berg</td>
-            <td>Aug. 2020 - Feb. 2021</td>
-        </tr>
-        <tr>
-            <td>Afwasser</td>
-            <td>Sporthal 't Stapveld</td>
-            <td>Berlaar</td>
-            <td>Aug. 2018 - Mrt. 2020</td>
-        </tr>
-        <tr>
-            <td>Opdienen</td>
-            <td>Sporthal 't Stapveld</td>
-            <td>Berlaar</td>
-            <td>Aug. 2018 - Mrt. 2020</td>
-        </tr>
-    </table>
-    <hr>
-    <a href="index.html">Terug naar start</a>
+      </div>
+  </div>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
@@ -132,104 +96,148 @@
     body{
       background-color: gainsboro;
     }
-
-#timeline {
-  position: relative;
-  height: 100%;
-  padding: 0 0 40px;
-  
-  
-}
-
-#timeline-header{
-  position: relative;
-  text-align: center;
-  border-width: 4px;
-  border-color: #0d6efd;
-  text-align: center;
-  padding-top: 40px;
-}
-
-
-#start-left {
-  position: relative;
-  left: 0;
-  border-top: 2px solid #0d6efd;
-  border-right: 2px solid #0d6efd;
-  border-radius: 0 60px 0 0;
-  height: 80px;
-  
-}
-
-#start-right {
-  position: relative;
-  right: 0;
-  border-top: 2px solid #0d6efd;
-  border-left: 2px solid #0d6efd;
-  border-radius: 60px 0 0 0;
-  height: 80px;
-  
-}
-
-/* Left side */
-
-.time-left {
-  border-right: 2px solid #0d6efd;
-  height: 200px;
-  padding: 0 15px 0 0;
-  text-align: right;
-}
-
-.time-left .date {
-  width: 100%;
-  padding-right: 15px;
-}
-
-.inner-left {
-  width: 20px;
-  height: 95%;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  padding: 0;
-  margin: 0;
-  border-top: 4px solid #0d6efd;
-  border-color: #0d6efd;
-}
-
-/* Right Side */
-
-.time-right {
-  border-left: 2px solid #0d6efd;
-  height: 200px;
-  padding: 0 0 0 15px;
-  text-align: left;
-}
-
-.inner-right {
-  width: 20px;
-  height: 95%;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  padding: 0;
-  margin: 0;
-  border-top: 4px solid #0d6efd;
-  border-color: #0d6efd;
-}
-
-.time-right .date {
-  width: 100%;
-  padding-left: 15px;
-}
-
-/* Media query to help keep the Job Titles from overflowing */
-
-@media only screen and (max-width: 750px) {
-
-  .date-details h3 {
-    font-size: 1.35rem;
-  }
-
-}
+    .content{
+      margin: 1rem;
+    }
+    :root{
+    --color_1: #0d6efd;
+    }
+    .main-timeline{ font-family: 'Roboto', sans-serif; }
+    .main-timeline .timeline{
+        padding: 18px 15px 15px 15px;
+        position: relative;
+        z-index: 1;
+    }
+    .main-timeline .timeline:before{
+        content: '';
+        height: 2px;
+        width: 15%;
+        border-top: 2px dashed #999;
+        transform: translateY(-50%);
+        position: absolute;
+        left: 118px;
+        top: 50%;
+        z-index: -1;
+    }
+    .main-timeline .timeline-content{
+        color: #fff;
+        width: 55%;
+        margin: 0 auto;
+        display: block;
+    }
+    .main-timeline .timeline-content:hover{ color: #fff; }
+    .main-timeline .timeline-icon{
+        color: #fff;
+        background-color: var(--color_1);
+        font-size: 50px;
+        text-align: center;
+        line-height: 80px;
+        height: 90px;
+        width: 90px;
+        border: 5px solid #fff;
+        box-shadow: 0 0 0 7px var(--color_1);
+        border-radius: 50%;
+        transform: translateY(-50%);
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        z-index: 1;
+    }
+    .main-timeline .timeline-icon:before,
+    .main-timeline .timeline-icon:after{
+        content: '';
+        height: 120px;
+        width: 120px;
+        border: 2px solid transparent;
+        border-right: 2px solid #999;
+        border-radius: 50%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        z-index: 1;
+    }
+    .main-timeline .timeline-icon:after{
+        background: #999;
+        height: 8px;
+        width: 8px;
+        border: none;
+        transform: translateX(0) translateY(-50%);
+        left: auto;
+        right: -23px;
+    }
+    .main-timeline .inner-content{
+        background-color: var(--color_1);
+        text-align: center;
+        padding: 10px 30px;
+        -webkit-clip-path: polygon(90% 0, 100% 48%, 90% 100%, 10% 100%, 0 49%, 10% 0);
+        clip-path: polygon(90% 0, 100% 48%, 90% 100%, 10% 100%, 0 49%, 10% 0);
+    }
+    .main-timeline .title{
+        font-size: 23px;
+        font-weight: 600;
+        margin: 0 0 5px;
+    }
+    .main-timeline .description{
+        font-size: 14px;
+        letter-spacing: 1px;
+        margin: 0;
+    }
+    .main-timeline .timeline:nth-child(even):before{
+        left: auto;
+        right: 118px;
+    }
+    .main-timeline .timeline:nth-child(even) .timeline-icon{
+        left: auto;
+        right: 10px;
+    }
+    .main-timeline .timeline:nth-child(even) .timeline-icon:before{
+        border: 2px solid transparent;
+        border-left-color: #999;
+    }
+    .main-timeline .timeline:nth-child(even) .timeline-icon:after{
+        right: auto;
+        left: -22px;
+    }
+    .main-timeline .timeline:nth-child(4n+2) .timeline-icon{
+        color: #fff;
+        background-color: var(--color_1);
+        box-shadow: 0 0 0 7px var(--color_1);
+    }
+    .main-timeline .timeline:nth-child(4n+2) .inner-content{
+        background-color: var(--color_1);
+    }
+    .main-timeline .timeline:nth-child(4n+3) .timeline-icon{
+        color: #fff;
+        background-color: var(--color_1);
+        box-shadow: 0 0 0 7px var(--color_1);
+    }
+    .main-timeline .timeline:nth-child(4n+3) .inner-content{
+        background-color: var(--color_1);
+    }
+    .main-timeline .timeline:nth-child(4n+4) .timeline-icon{
+        color: #fff;
+        background-color: var(--color_1);
+        box-shadow: 0 0 0 7px var(--color_1);
+    }
+    .main-timeline .timeline:nth-child(4n+4) .inner-content{
+        background-color: var(--color_1);
+    }
+    @media only screen and (max-width:576px){
+        .main-timeline .timeline{
+            padding: 100px 0 0 0;
+            margin: 0 0 10px;
+        }
+        .main-timeline .timeline-content{ width: 100%; }
+        .main-timeline .timeline-icon,
+        .main-timeline .timeline:nth-child(even) .timeline-icon{
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%) translateY(0);
+        }
+        .main-timeline .timeline-icon:before,
+        .main-timeline .timeline-icon:after{
+            display: none;
+        }
+    }
   </style>
