--- a/Project/hobby's-interesses.html
+++ b/Project/hobby's-interesses.html
@@ -43,7 +43,7 @@
     </p>
     <h3>Volleybal</h3>
     <p>
-        <img src="../Project/img/volleybal.jpg" alt="volleybal" width="25%">
+        <img src="img/volleybal.jpg" alt="volleybal" width="25%">
     </p>
     <p>
         1 van mijn hobby's is volleybal, dit doe ik sinds 2017. Ik ben gestart door een vriend dat al volleybal speelde.
@@ -52,7 +52,7 @@
     </p>
     <h3>Airsoft</h3>
     <p>
-        <img src="../Project/img/airsoft.jpg" alt="airsoft" width="25%">
+        <img src="img/airsoft.jpg" alt="airsoft" width="25%">
     </p>
     <p>
         Een andere van mijn hobby's is airsoft. Ik heb mijn eerste replica gekocht in December 2020, mijn eerste skirm heb ik gespeeld in mei 2021.
@@ -73,7 +73,7 @@
     </p>
     <h3>American football</h3>
     <p>
-        <img src="../Project/img/american football.jpg" alt="american football" width="25%">
+        <img src="img/american football.jpg" alt="american football" width="25%">
     </p>
     <p>
         De eerste van mijn interesses is american football. Ik vind dit een geweldige sport om naar te kijken.
@@ -83,7 +83,7 @@
     </p>
     <h3>Voetbal</h3>
     <p>
-        <img src="../Project/img/voetbal.jpg" alt="voetbal" width="25%">
+        <img src="img/voetbal.jpg" alt="voetbal" width="25%">
     </p>
     <p>
         Een volgende interesse van mij is voetbal. Ik denk dat dit bij de meeste jongens wel een interesse is.
@@ -93,7 +93,7 @@
     </p>
     <h3>Fietsen</h3>
     <p>
-        <img src="../Project/img/fiets.jpg" alt="fiets" width="25%">
+        <img src="img/fiets.jpg" alt="fiets" width="25%">
     </p>
     <p>
         Mijn volgende interesse is fietsen. Dit komt omdat mijn vader altijd heeft gefietst en hij heeft mij een keer meegenomen en ik vond dit wel tof om te doen.
@@ -104,7 +104,7 @@
     </p>
     <h3>Formula 1</h3>
     <p>
-        <img src="../Project/img/f1.jpg" alt="f1" width="25%">
+        <img src="img/f1.jpg" alt="f1" width="25%">
     </p>
     <p>
         De laatste van mijn interesses is formule 1. Ik ben beginnen kijken in 2019, maar ben pas fan geworden in 2021.
