--- a/Project/index.html
+++ b/Project/index.html
@@ -30,7 +30,7 @@
     <h1>Welkom op de portfolio van Ilya Peeters</h1>
     <hr>
     <div class="content">
-      <div><img class="portret" src="../Project/img/Foto_ilya.jpg" width="200" alt="Foto_ilya" style="float: right; right: 50%;" ></div>
+      <div><img class="portret" src="img/Foto_ilya.jpg" width="200" alt="Foto_ilya" style="float: right; right: 50%;" ></div>
       <div>Hallo ik ben Ilya Peeters en welkom op mijn portfolio.</div>
       <div>Op mijn portfolio gaat u verschillende pagina's vinden maar hier over later meer.</div>
       <div>Eerst wat over mezelf, ik ben 19 jaar en studeer een graduaat Systeem- en netwerkbeheer te Geel. Ik zit momenteel is mijn eerste jaar van deze graduaat opleiding.</div>
