--- a/Project/index.html
+++ b/Project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="../img/favicon-32x32.png">
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>Home</title>
@@ -30,7 +30,7 @@
     <h1>Welkom op de portfolio van Ilya Peeters</h1>
     <hr>
     <div class="content">
-      <div><img class="portret" src="img/Foto_ilya.jpg" width="200" alt="Foto_ilya" style="float: right; right: 50%;" ></div>
+      <div><img class="portret" src="../img/Foto_ilya.jpg" width="200" alt="Foto_ilya" style="float: right; right: 50%;" ></div>
       <div>Hallo ik ben Ilya Peeters en welkom op mijn portfolio.</div>
       <div>Op mijn portfolio gaat u verschillende pagina's vinden maar hier over later meer.</div>
       <div>Eerst wat over mezelf, ik ben 19 jaar en studeer een graduaat Systeem- en netwerkbeheer te Geel. Ik zit momenteel is mijn eerste jaar van deze graduaat opleiding.</div>
