--- a/Project/contact.html
+++ b/Project/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>Contact</title>
@@ -53,9 +53,9 @@
     </div>
     <br>
     <h4>U kan mij verder bereiken via:</h4>
-    <div>Telefoon: bel naar 0487135427 of druk hier<a href="tel:0487135427"><img src="../img/telefoon_logo.jpg" alt="telefoon_logo" width="20"></a></div>
-    <div>Mail: stuur een mail naar ilya.peeters@gmail.com of druk hier<a href="mailto:ilya.peeters@gmail.com"><img src="../img/mail_logo.jpg" alt="mail_logo" width="25"></a></div>
-    <div>LinkedIn: druk hier om naar mijn linkedIn te gaan <a href="https://linkedin.com" target="_blank"><img src="../img/Linkedin-logo-transparent-PNG.png" alt="linkedin_logo" width="25"></a></div>
+    <div>Telefoon: bel naar 0487135427 of druk hier<a href="tel:0487135427"><img src="img/telefoon_logo.jpg" alt="telefoon_logo" width="20"></a></div>
+    <div>Mail: stuur een mail naar ilya.peeters@gmail.com of druk hier<a href="mailto:ilya.peeters@gmail.com"><img src="img/mail_logo.jpg" alt="mail_logo" width="25"></a></div>
+    <div>LinkedIn: druk hier om naar mijn linkedIn te gaan <a href="https://linkedin.com" target="_blank"><img src="img/Linkedin-logo-transparent-PNG.png" alt="linkedin_logo" width="25"></a></div>
     <script src="js/bootstrap.bundle.min.js"></script>
 </div>
 </body>
